@@ -3,14 +3,14 @@
 <!ENTITY gst-ffmpeg-version-stable "0.8.7">
 <!ENTITY gst-python-version-stable "0.8.2">
 
-<!ENTITY gst-version-devel "0.9.5">
-<!ENTITY gst-plugins-base-version-devel "0.9.5">
-<!ENTITY gst-plugins-good-version-devel "0.9.5">
-<!ENTITY gst-plugins-ugly-version-devel "0.9.5">
-<!ENTITY gst-plugins-bad-version-devel "0.9.5">
+<!ENTITY gst-version-devel "0.9.6">
+<!ENTITY gst-plugins-base-version-devel "0.9.6">
+<!ENTITY gst-plugins-good-version-devel "0.9.6">
+<!ENTITY gst-plugins-ugly-version-devel "0.9.6">
+<!ENTITY gst-plugins-bad-version-devel "0.9.6">
 
-<!ENTITY gst-ffmpeg-version-devel "0.9.5">
-<!ENTITY gst-python-version-devel "0.9.5">
+<!ENTITY gst-ffmpeg-version-devel "0.9.6">
+<!ENTITY gst-python-version-devel "0.9.6">
 
 <!ENTITY gst-bug-report "http://bugzilla.gnome.org/enter_bug.cgi?product=GStreamer">
 <!ENTITY gst-cvs-http "http://cvs.freedesktop.org/gstreamer/">
