@@ -1,3 +1,9 @@
+2005-11-24  Andy Wingo  <wingo@pobox.com>
+
+	* src/htdocs/entities.gst: Update entities
+
+	* src/htdocs/news/status.xml: dump
+
 2005-11-23  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* src/htdocs/news/news.xml:
